[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[project]
name = "arepy"
description = "An ECS python game engine with Raylib"
authors = [{ name = "Abrahan Gil", email = "scr44gr@protonmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
]
keywords = ['ecs', 'game-engine', 'python-game-engine']
requires-python = ">=3.10"
dependencies = ["bitarray==3.8.0", "raylib==5.5.0.3"]
dynamic = ['version']
readme = "README.md"

[project.optional-dependencies]
imgui = ["imgui-bundle==1.6.0", "moderngl==5.12.0"]
testing = ["pytest>=8.0.0", "pytest-cov>=4.0.0", "pytest-mock>=3.12.0"]

[tool.uv]
dev-dependencies = [
    "python-dotenv==1.0.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arepy", "arepy.*"]

[tool.setuptools.dynamic]
version = { attr = "arepy.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=arepy",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["arepy"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
    "*/engine/*",
    "*/event_manager/*",
    "*/math/*",
    "*/bundle/*",
    "*/container.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
